{
    "name": "Player Controls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "ec04e837-eebd-4288-a446-48f88d83a771",
            "actions": [
                {
                    "name": "MovementControls",
                    "type": "PassThrough",
                    "id": "aea45133-cd8f-444a-80d2-5824190817ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraControls",
                    "type": "PassThrough",
                    "id": "7f1ee886-92e0-4efb-879e-e07dc3eecf1e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraZoomIn",
                    "type": "PassThrough",
                    "id": "07b841c5-8a87-4dd7-88ff-0e4d85ff575c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraZoomOut",
                    "type": "Button",
                    "id": "1b76691f-79e8-4ea2-ba4b-8d4c4ab9bcf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraRotateClockwise",
                    "type": "PassThrough",
                    "id": "95c2b176-6280-4c41-968d-d02dae4a4d8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "CameraRotateCounterClockwise",
                    "type": "PassThrough",
                    "id": "2ba588bb-a5d1-48d2-b463-c3da5005d269",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "f5c106f3-75f7-4b55-b74b-30e5b9664fd5",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "84e52914-f6d2-4e74-b7ad-d93c2e2dde0a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9178e639-eb0c-4680-a27c-3ac7634ed35e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "53d452d1-f4f9-4ef4-bf6f-fc346ee0b2b6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2ff5f421-2d2a-4e34-b166-3c1e02523b28",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "a572b560-19da-41bf-b0ef-2bd3a803349a",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ec51ca27-6737-4086-aa38-f5998063b7c7",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2ab045db-bab1-4f90-a0f3-05483830acc2",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "deeacacf-9882-475a-8d14-d0e1061479a6",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1ae72675-90cc-4f24-b83a-8dd8876da6db",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "710b9b8f-e2a6-4cb1-9db4-905109e70ef9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ce8c067-6bc1-4e2d-9a91-b9f54528e2a6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "CameraControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f34599-e6c7-4157-857d-eb0e6f054e03",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoomIn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de563019-6b0d-4063-90f6-2a9a5ace9e54",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoomOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "317e808f-9154-4c8c-a437-90fc40fe5997",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23519e2e-aac1-4f49-bc64-e36fccc07449",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a8f0244-3c41-4e84-9987-56e038c469a8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateCounterClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d2d5190-249c-47b5-ac7e-2c1a5c40d0af",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateCounterClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "9e7eba5d-e159-4d7d-8f1e-838593972644",
            "actions": [
                {
                    "name": "Attack",
                    "type": "PassThrough",
                    "id": "dac405dd-d7d7-4ffd-a5aa-8aad5d8b5aac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Block",
                    "type": "PassThrough",
                    "id": "778734ff-e4f6-4b1a-aa22-5518a9025e60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b41fa5d5-e6d1-4d5d-96df-f49994f2b7a7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33904756-7bd1-41a0-ba7f-16255e3d5c28",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a86feb57-6a4e-447c-8f3a-0bcbd52b0384",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c426f6b-8c3f-4e8d-94ae-f45c0ffb4d2d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "c77eb25b-fa85-471c-9000-4947a46786d0",
            "actions": [
                {
                    "name": "Inventory",
                    "type": "PassThrough",
                    "id": "7fcd2579-3302-4ab9-add5-ba32cff3d9ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "276591e9-b3f4-4cbc-a370-684eb8460366",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18893b76-22b5-4586-936a-2f84ecbaf64e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a850d6da-8255-4da8-ac2d-9d0fdd457c10",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8606ed01-c88a-45b2-90ad-883d3dae7a9e",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMode",
            "id": "6aa71b82-604c-49bd-9114-3dfe588b4d17",
            "actions": [
                {
                    "name": "ModeSwitch",
                    "type": "PassThrough",
                    "id": "7bdf7d74-d6a8-4ce1-a6d5-8d5c32087040",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6297422f-64cc-4cde-b05b-1029866a21ac",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModeSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb096c47-dff7-4951-b7a8-1ac012a6b0f3",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModeSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterSelect",
            "id": "ed757f0b-a29a-4839-8753-de4fd0dd8e1f",
            "actions": [
                {
                    "name": "NextCharacter",
                    "type": "PassThrough",
                    "id": "501b0edc-8d11-42e0-8742-46c2f3e6b121",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PreviousCharacter",
                    "type": "PassThrough",
                    "id": "04d4b63d-023a-4e2d-9946-e59c63a0d3b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c34da27-bff8-4a80-b386-9eb02d78df79",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37fddedb-0e94-44d9-82db-cb649416679e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94272b18-5692-44db-b33b-234fa9f110ef",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6beac27-99ea-4a83-b6be-2b939bca58fa",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}